--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,7 +11,7 @@
 
 [[main]]
   name = "Publications"
-  url = "#publications"
+  url = "publication"
   weight = 40
 
 [[main]]
@@ -21,7 +21,7 @@
 
 [[main]]
   name = "Courses"
-  url = "courses"
+  url = "teaching"
   weight = 60
 
 [[main]]
