--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -43,8 +43,9 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   categories = "/category/:slug/"
   publication_types = "/publication-type/:slug/"
 
+disableAliases = true
 [outputs]
-  home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
+  home = [ "HTML", "RSS", "JSON", "WebAppManifest" ,"headers", "redirects"]
   section = [ "HTML", "RSS" ]
 
 [mediaTypes."application/manifest+json"]
