--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -106,7 +106,8 @@ disableAliases = true
     weight = 20.0
 
 [module]
+  # Any existing modules here...
   [[module.imports]]
-    path = "github.com/wowchemy/wowchemy-hugo-modules/netlify-cms-academic"
+    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms"
   [[module.imports]]
     path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
