--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -215,7 +215,7 @@ plugins_js  = []
   #   0: Disabled
   #   1: Disqus (https://disqus.com)
   #   2: Commento (https://commento.io)
-  engine = 0
+  provider = 0
 
   # Which page types are commentable?
   commentable = {page = true, post = true, docs = true, project = true, publication = true, talk = true}
@@ -236,9 +236,9 @@ plugins_js  = []
 [search]
   # Search provider:
   #   0: No search engine
-  #   1: Academic (built-in)
+  #   1: Wowchemy (built-in)
   #   2: Algolia (https://www.algolia.com)
-  engine = 1
+  provider = 1
 
   # Configuration of Algolia search engine.
   # Paste the values from your Algolia dashboard.
@@ -266,7 +266,7 @@ plugins_js  = []
   #   1: Google Maps
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
-  engine = 2
+  provider = 2
   api_key = ""
   zoom = 15
 
