updated teaching and join the group

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,6 +19,11 @@
   url = "group"
   weight = 50
 
+  [[main]]
+  name = "Join the group"
+  url = "join-the-group"
+  weight = 50
+
 [[main]]
   name = "Courses"
   url = "teaching"
