--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -111,3 +111,14 @@ disableAliases = true
     path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5"
   [[module.imports]]
     path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5"
+
+[security]
+  enableInlineShortcodes = false
+  [security.exec]
+    allow = ['^dart-sass-embedded$', '^go$', '^npx$', '^postcss$']
+    osEnv = ['(?i)^((HTTPS?|NO)_PROXY|PATH(EXT)?|APPDATA|TE?MP|TERM)$']
+  [security.funcs]
+    getenv = ['^HUGO_', '^CI$', '^WC_']
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
